# stacklens

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/stacklens/application/commands/: run_analysis.py
src/stacklens/application/dtos/: analysis_config.py
src/stacklens/application/orchestration/: pipeline.py
src/stacklens/application/services/: summary_builder.py
src/stacklens/domain/models/: backend.py  browser.py  dns.py  frontend.py  headers.py  meta.py  performance.py  recommendations.py  report.py  summary.py  target.py  tls.py
src/stacklens/domain/ports/: analyser.py  http_client.py  report_writer.py
src/stacklens/domain/services/: ethics.py  header_scoring.py  performance_scoring.py  recommendation_builder.py
src/stacklens/infrastructure/adapters/: httpx_client.py
src/stacklens/infrastructure/analysers/: backend_analyser.py  browser_analyser.py  dns_analyser.py  frontend_analyser.py  headers_analyser.py  tls_analyser.py
src/stacklens/infrastructure/config/: container.py
src/stacklens/infrastructure/writers/: html_writer.py  json_writer.py
tests/: conftest.py
tests/application/: test_pipeline.py  test_summary_builder.py
tests/domain/: test_browser_models.py  test_header_scoring.py  test_models.py  test_performance_scoring.py  test_recommendation_builder.py
tests/infrastructure/: test_backend_analyser.py  test_browser_analyser.py  test_browser_analyser_integration.py  test_dns_analyser_dmarc_caa_ptr.py  test_dns_analyser_enriched.py  test_frontend_analyser.py  test_headers_analyser.py  test_html_writer.py
(+8 files in other folders)
