[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stacklens"
version = "0.1.0"
description = "AI-augmented web analysis platform"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.5",
    "dnspython>=2.5",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]

[project.scripts]
stacklens = "stacklens.presentation.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/stacklens"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (requires playwright)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "playwright>=1.40",
]
